# serde-binary

./: Cargo.toml  README.md
src/: deserializer.rs  error.rs  lib.rs  serializer.rs
