[package]
name = "serde-binary"
version = "0.4.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2021"

description = "Serde data format for binary files"
repository = "https://github.com/tmpfs/serde-binary"
readme = "README.md"
keywords = ["serde", "binary", "data", "file", "format"]
license = "MIT"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.binary-stream]
version = "3.0.0"
features = ["wasm32"]

[dev-dependencies]
anyhow = "1"
