[package]
name = "serde-binary"
version = "0.5.0"
authors = ["muji <muji@tmpfs.org>"]
edition = "2021"

description = "Serde data format for binary files"
repository = "https://github.com/tmpfs/serde-binary"
readme = "README.md"
keywords = ["serde", "binary", "data", "file", "format"]
license = "MIT"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dependencies.binary-stream]
version = "3.3.2"
features = ["32bit"]

[dev-dependencies]
anyhow = "1"
